--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <built.by>HGDIV</built.by>
-        <main.class>com.hgdiv.kidice.game.Main</main.class>
         <java.version>11</java.version>
-        <mvn.complilerplug.version>3.8.1</mvn.complilerplug.version>
+        <mvn.comp-plugin.version>3.8.1</mvn.comp-plugin.version>
         <joml.version>1.9.19</joml.version>
         <lwjgl.version>3.2.3</lwjgl.version>
-        <mvn.execplug.version>1.6.0</mvn.execplug.version>
-        <mvn.jarplug.version>3.1.2</mvn.jarplug.version>
-        <mvn.resplug.version>3.1.0</mvn.resplug.version>
         <pngdecoder.version>1.0</pngdecoder.version>
     </properties>
 
@@ -88,101 +84,29 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources/textures/</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources/shaders/</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${mvn.complilerplug.version}</version>
+                <version>${mvn.comp-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>${mvn.resplug.version}</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources-models</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/models</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>models</directory>
-                                    <filtering>false</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-resources-textures</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/textures</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>textures</directory>
-                                    <filtering>false</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${mvn.execplug.version}</version>
-                <configuration>
-                    <mainClass>${main.class}</mainClass>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${mvn.jarplug.version}</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>${main.class}</mainClass>
-                            <classpathPrefix>lib/</classpathPrefix>
-                        </manifest>
-                        <manifestEntries>
-                            <Built-By>${built.by}</Built-By>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
-
 
     <profiles>
         <profile>
